added DbContext. Having trouble with dictionary.

--- a/RecipeAPI/appsettings.json
+++ b/RecipeAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RecipeContext": "Server=(localdb)\\mssqllocaldb;Database=RecipeAPI.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
